# wordlesolver

./: README.md  pylint.rc  pyproject.toml
.github/workflows/: pylint.yml
src/: possibilities.py  solver.py  test.py
src/wordlesolver/: __init__.py  game_state.py  possibilities.py  sgb_words.py  solver.py  test.py  wordbank.py
wordlesolver/: game_state.py  possibilities.py  solver.py  test.py  wordbank.py
