[tool.poetry]
name = "wordlesolver"
version = "0.1.1"
description = ""
authors = ["Tom Punihaole <tom.punihaole@gmail.com>"]
include = [
    "data/*"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
