[tool.poetry]
name = "wordlesolver"
version = "0.1.2"
description = ""
authors = ["Tom Punihaole <tom.punihaole@gmail.com>"]
include = [
    "src/data",
    "src/wordlesolver"
]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
